--- a/app/index.html
+++ b/app/index.html
@@ -25,36 +25,36 @@ current: Assignment
         <li>
           <button class="w-100 d-flex justify-content-between p-12 border border-grays-400 text-black bg-white">
             <div class="text-start">
-              <p class="text-dark fz-12 lh-base mb-0">Chapter Assignment 2</p>
-              <h3 class="fs-5 lh-base mb-0">Please check this file…</h3>
+              <p class="text-dark fz-12 lh-base mb-0">Chapter Assignment 1</p>
+              <h3 class="fs-5 lh-base mb-0">My Homework</h3>
             </div>
             <div class="text-end">
-              <p class="text-secondary mb-0">4 hrs ago</p>
-              <p class="text-dark mb-0">Emily Wang</p>
+              <p class="text-secondary mb-0">12 hrs ago</p>
+              <p class="text-dark mb-0">David Xu</p>
             </div>
           </button>
         </li>
         <li>
           <button class="w-100 d-flex justify-content-between p-12 border border-grays-400 text-black bg-white">
             <div class="text-start">
-              <p class="text-dark fz-12 lh-base mb-0">Chapter Assignment 2</p>
-              <h3 class="fs-5 lh-base mb-0">Please check this file…</h3>
+              <p class="text-dark fz-12 lh-base mb-0">Final Assignment</p>
+              <h3 class="fs-5 lh-base mb-0">Have a problem with this…</h3>
             </div>
             <div class="text-end">
-              <p class="text-secondary mb-0">4 hrs ago</p>
-              <p class="text-dark mb-0">Emily Wang</p>
+              <p class="text-secondary mb-0">18 hrs ago</p>
+              <p class="text-dark mb-0">Tony Wei</p>
             </div>
           </button>
         </li>
         <li>
           <button class="w-100 d-flex justify-content-between p-12 border border-grays-400 text-black bg-white">
             <div class="text-start">
-              <p class="text-dark fz-12 lh-base mb-0">Chapter Assignment 2</p>
-              <h3 class="fs-5 lh-base mb-0">Please check this file…</h3>
+              <p class="text-dark fz-12 lh-base mb-0">Final Assignment</p>
+              <h3 class="fs-5 lh-base mb-0">Did I do it right?</h3>
             </div>
             <div class="text-end">
-              <p class="text-secondary mb-0">4 hrs ago</p>
-              <p class="text-dark mb-0">Emily Wang</p>
+              <p class="text-secondary mb-0">18 hrs ago</p>
+              <p class="text-dark mb-0">Christina Lin</p>
             </div>
           </button>
         </li>
